Fix scroll up arrow z-index

--- a/src/components/scroll-up/components/scroll-up.css
+++ b/src/components/scroll-up/components/scroll-up.css
@@ -11,6 +11,7 @@
 	visibility: visible;
 	opacity: 1;
 	transition: visibility 100ms linear, opacity 100ms linear;
+	z-index: 1000;
 }
 .ui.button.basic.scroll-up:focus {
 	box-shadow: none;
